# QuartzLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  QuartzLib-config.cmake  QuartzLib.natvis  README.md
Include/: QuartzLib.h
Include/Memory/: Allocator.h  Memory.h  PoolAllocator.h
Include/Types/: Array.h  BlockSet.h  List.h  Map.h  Pool.h  Set.h  SparseSet.h  Stack.h  String.h  Table.h  Tuple.h  Types.h
Include/Types/Special/: BlockSet.h  ByteBuffer.h  FractalGrid.h  LinearQuadTree.h  QuadTree.h  SparseSet.h
Include/Utility/: Fold.h  Hash.h  InitializerList.h  Iterator.h  Move.h  RefCounter.h  StringReader.h  Swap.h  Template.h  TypeId.h  Whitespace.h
